Rewrite to ResearchClaw V2 with 11-state FSM and strict authority model

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,2 @@
-# ResearchClaw — Secrets Template
-# Copy this file to .env and fill in your values.
-# The .env file is gitignored and never committed.
-#
-# Usage: cp .env.example .env && chmod 600 .env
-# The agent automatically loads .env on startup.
-
-# ── Telegram ─────────────────────────────────────────────────────────────────
-# Required when messenger.type = telegram in config.yaml
-# Get a token by messaging @BotFather on Telegram: /newbot
-TELEGRAM_BOT_TOKEN=
-
-# ── Slack ────────────────────────────────────────────────────────────────────
-# Required when messenger.type = slack in config.yaml
-# Create a Slack App at https://api.slack.com/apps
-# Bot Token: OAuth & Permissions → Bot User OAuth Token (xoxb-...)
-# App Token: Socket Mode → Generate App-Level Token (xapp-..., scope: connections:write)
-# Required Bot Scopes: chat:write, channels:history, channels:read
-# Required Event Subscription: message.channels
-SLACK_BOT_TOKEN=
-SLACK_APP_TOKEN=
-
-# ── LLM providers ────────────────────────────────────────────────────────────
-# Required when llm.provider = anthropic in config.yaml
-ANTHROPIC_API_KEY=
-
-# Optional: OpenAI (stub — not yet implemented)
-# OPENAI_API_KEY=
+# ResearchClaw V2 currently relies on your local git and optional Claude CLI login.
+# Add environment variables here only if you extend providers/channels.
