Overhaul execution model to fully autonomous pipeline
After plan approval, the entire experiment→eval→report cycle now runs
automatically without user intervention. AI generates all code via
fresh-context Ralph loop, executes experiments, auto-fixes failures,
and only returns control at DECIDE state.

Key changes:
- Add AIWorker.implement_experiment() and implement_eval() for auto code gen
- Remove user confirmation from execution pipeline (no messenger.confirm)
- Ralph loop auto-retry works in both autopilot and non-autopilot modes
- Conversational UX: natural language intent detection across all states
- Add TelegramMessenger adapter with optional python-telegram-bot dependency
- Add PlanEngine.proactive_search() for research trends at plan entry
- Reset version to 1.0.0
- Clean runtime artifacts, update .gitignore
- Comprehensive test suite: 55 tests covering auto-pipeline, conversational
  UX, messenger, policy, abort/autopilot flows

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# ResearchClaw V2 currently relies on your local git and optional Claude CLI login.
+# ResearchClaw currently relies on your local git and optional Claude CLI login.
 # Add environment variables here only if you extend providers/channels.
