--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "researchclaw"
-version = "2.0.0"
-description = "ResearchClaw V2 - chat-first research orchestrator with strict FSM and access policy"
+version = "1.0.0"
+description = "ResearchClaw - chat-first research orchestrator with strict FSM and access policy"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -13,6 +13,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+telegram = [
+  "python-telegram-bot>=21.0",
+]
 dev = [
   "pytest>=8.0",
 ]
